# lao-translator-android

./: .gitignore  CHANGELOG.md  README.md  gradlew  gradlew.bat  settings.gradle.kts  setup.sh  version.json
.github/workflows/: build-apk.yml  build-release.yml  build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/lao/translator/service/: TranslationService.kt
app/src/main/java/com/lao/translator/stt/: AudioRecorder.kt  WhisperManager.kt
app/src/main/java/com/lao/translator/translate/: TranslationManager.kt
app/src/main/java/com/lao/translator/tts/: TtsManager.kt
app/src/main/java/com/lao/translator/ui/: MainActivity.kt
app/src/main/java/com/translator/lao/api/: HttpClient.kt  TranslationApi.kt
app/src/main/java/com/translator/lao/data/: Dictionary.kt  DictionaryStore.kt  FavoritesStore.kt  HistoryStore.kt  OfflineDictionaryDb.kt  ThaiRomanizer.kt
app/src/main/java/com/translator/lao/speech/: MiMoTtsManager.kt  SpeechManager.kt
app/src/main/java/com/translator/lao/ui/: CategoryAdapter.kt  DictionarySearchActivity.kt  FavoritesActivity.kt  HistoryActivity.kt  MainActivity.kt  OcrTranslateActivity.kt
app/src/main/java/com/translator/lao/update/: UpdateManager.kt
app/src/main/res/anim/: pulse.xml
app/src/main/res/drawable/: ic_camera.xml  ic_clear.xml  ic_copy.xml  ic_mic.xml  ic_mic_off.xml  ic_swap.xml
app/src/main/res/layout/: activity_dictionary_search.xml  activity_history.xml  activity_main.xml  activity_ocr_translate.xml  item_category_entry.xml  item_dictionary_entry.xml  item_history_entry.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
